# tree-sitter-nelua

./: .envrc  .gitignore  CMakeLists.txt  Cargo.toml  Justfile  Makefile  Package.swift  binding.gyp  bun.lockb  devenv.nix  flake.nix  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  testfile  tree-sitter.json
bindings/c/: tree-sitter-nelua.h  tree-sitter-nelua.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nelua/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNeluaTests/: TreeSitterNeluaTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
